--- a/www/index.html
+++ b/www/index.html
@@ -129,6 +129,7 @@
                           <img src="img/adzan.png" style="width:100%; height:100%;">
                         </a>
                         <p style="color:white;">{{ gcm_id }}</p>
+                        <input ng-model="gcm_id" type="text">
                     </div>
                    
                    
