--- a/www/index.html
+++ b/www/index.html
@@ -216,11 +216,16 @@
 
             cordova.plugins.notification.local.schedule({
                 id: 1,
-                text: 'Test Message 1',
-                icon: 'http://image.flaticon.com/teams/1-freepik.jpg',
-                smallIcon: 'res://cordova',
-                sound: null,
-                data: { test: id }
+                title: "Production Jour fixe",
+                text: "Duration 1h",
+                every: "minutes",
+                sound: "file://sounds.mp3",
+                icon: "http://image.flaticon.com/teams/1-freepik.jpg",
+                data: { meetingId:"123#fg8" }
+            });
+
+            cordova.plugins.notification.local.on("click", function (notification) {
+                joinMeeting(notification.data.meetingId);
             });
         }
     </script>
