--- a/www/index.html
+++ b/www/index.html
@@ -231,7 +231,7 @@
                 sound: "file://sounds.mp3",
                 icon: "http://image.flaticon.com/teams/1-freepik.jpg",
                 data: { meetingId:"123#fg8" }
-            }]);
+            }], callback);
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
