--- a/www/index.html
+++ b/www/index.html
@@ -214,7 +214,19 @@
                 console.log(e.message);
             });
 
-            cordova.plugins.notification.local.schedule([{
+            callback = function () {
+                cordova.plugins.notification.local.schedule({
+                    id: 1,
+                    title: "satu repeat",
+                    text: "local notification test 1",
+                    every: "minutes",
+                    sound: "file://sounds.mp3",
+                    icon: "http://image.flaticon.com/teams/1-freepik.jpg",
+                    data: { meetingId:"123#fg8" }
+                }, callback);
+            };
+
+            cordova.plugins.notification.local.schedule({
                 id: 1,
                 title: "satu",
                 text: "local notification test 1",
@@ -222,16 +234,7 @@
                 sound: "file://sounds.mp3",
                 icon: "http://image.flaticon.com/teams/1-freepik.jpg",
                 data: { meetingId:"123#fg8" }
-            },
-            {
-                id: 2,
-                title: "dia",
-                text: "local notification test 2",
-                every: "minutes",
-                sound: "file://sounds.mp3",
-                icon: "http://image.flaticon.com/teams/1-freepik.jpg",
-                data: { meetingId:"123#fg8" }
-            }], callback);
+            }, callback);
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
