--- a/www/index.html
+++ b/www/index.html
@@ -226,15 +226,7 @@
                 }, callback);
             };
 
-            cordova.plugins.notification.local.schedule({
-                id: 1,
-                title: "satu",
-                text: "local notification test 1",
-                every: "minutes",
-                sound: "file://sounds.mp3",
-                icon: "http://image.flaticon.com/teams/1-freepik.jpg",
-                data: { meetingId:"123#fg8" }
-            }, callback);
+            callback();
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
