--- a/www/index.html
+++ b/www/index.html
@@ -223,7 +223,7 @@
                 var minutes = time.substring(index + 1, index2);
 
                 var mer = time.substring(index2 + 1, time.length);
-                if (mer == "PM"){
+                if (mer == "pm"){
                     hours = hours + 12;
                 }
 
