add default schedule

--- a/www/index.html
+++ b/www/index.html
@@ -234,11 +234,11 @@
                 return date;
             }
 
-            var fajr = new Date();
-            var dhuhr = new Date();
-            var asr = new Date();
-            var maghrib = new Date();
-            var isha = new Date();
+            var fajr = "4:19 am";
+            var dhuhr = "11:41 am";
+            var asr = "2:47 pm";
+            var maghrib = "6:56 pm";
+            var isha = "4:19 am";
 
             callback = function () {
                 console.log(fajr);
@@ -257,7 +257,7 @@
             $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
             {
                 fajr = setDateTime(fajr, times.items[0].fajr);
-                //console.log(times.items[0].fajr);
+                console.log(times);
                 //console.log(fajr);
                 callback();
             });
