schedule every 5 second

--- a/www/index.html
+++ b/www/index.html
@@ -241,12 +241,16 @@
             var isha = "4:19 am";
 
             callback = function () {
-                console.log(fajr);
+                //console.log(fajr);
+                var one_minute = "1:35 pm";
+                var now = new Date().getTime();
+                var _5_sec_from_now = new Date(now + 5*1000);
 
                 cordova.plugins.notification.local.schedule({
                     id: 1,
-                    title: "satu repeat",
-                    text: "local notification test 1" + d,
+                    title: "setiap lima detik",
+                    text: "local notification test 1" + now,
+                    at: _5_sec_from_now,
                     every: "minutes",
                     sound: "file://sounds.mp3",
                     icon: "http://image.flaticon.com/teams/1-freepik.jpg",
