--- a/www/index.html
+++ b/www/index.html
@@ -242,14 +242,17 @@
 
             callback = function () {
                 //console.log(fajr);
-                var one_minute = "1:35 pm";
+                var one_minute = "5:00 pm";
                 var now = new Date().getTime();
-                var _5_sec_from_now = new Date(now + 5*1000);
+                var m = new Date();
+                var m = setDateTime(m, one_minute).getTime();
+                var timeDiff = Math.abs(m - now);
+                var _5_sec_from_now = new Date(now + timeDiff);
 
                 cordova.plugins.notification.local.schedule({
                     id: 1,
                     title: "setiap lima detik",
-                    text: "local notification test 1" + now,
+                    text: "local notification test 1" + _5_sec_from_now,
                     at: _5_sec_from_now,
                     every: "minutes",
                     sound: "file://sounds.mp3",
