update time test

--- a/www/index.html
+++ b/www/index.html
@@ -244,7 +244,7 @@
             {
                 var now = new Date().getTime();
                 var m = new Date();
-                var m = setDateTime(m, '00:45 pm').getTime();
+                var m = setDateTime(m, '01:15 am').getTime();
                 var timeDiff = Math.abs(m - now);
                 var waktu = new Date(now + timeDiff);
 
