--- a/www/index.html
+++ b/www/index.html
@@ -306,6 +306,28 @@
 
             callback_asr();
 
+            callback_maghrib = function ()
+            {
+                var now = new Date().getTime();
+                var m = new Date();
+                var m = setDateTime(m, maghrib).getTime();
+                var timeDiff = Math.abs(m - now);
+                var waktu = new Date(now + timeDiff);
+
+                cordova.plugins.notification.local.schedule({
+                    id: 3,
+                    title: "Waktunya sholat dhuhur",
+                    text: waktu,
+                    at: waktu,
+                    every: "day",
+                    sound: "file://mecca_56_22.mp3",
+                    icon: "file://icon.png",
+                    data: { meetingId:"123#fg8" }
+                }, callback_maghrib);
+            };
+
+            callback_maghrib();
+
             $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
             {
                 //fajr = setDateTime(fajr, times.items[0].fajr);
