--- a/www/index.html
+++ b/www/index.html
@@ -345,13 +345,13 @@
             //
             // callback_isha();
 
-            $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
-            {
-                //fajr = setDateTime(fajr, times.items[0].fajr);
-                console.log(times);
-                //console.log(fajr);
-
-            });
+            // $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
+            // {
+            //     //fajr = setDateTime(fajr, times.items[0].fajr);
+            //     console.log(times);
+            //     //console.log(fajr);
+            //
+            // });
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
