--- a/www/index.html
+++ b/www/index.html
@@ -366,6 +366,7 @@
                     title: "Waktunya sholat subuh",
                     text: waktu,
                     firstAt: waktu,
+                    every: "day",
                     sound: "file://fajr_128_44.mp3",
                     icon: "file://icon.png",
                     data: { meetingId:"123#fg8" }
@@ -387,6 +388,7 @@
                     title: "Waktunya sholat dhuhur",
                     text: waktu,
                     firstAt: waktu,
+                    every: "day",
                     sound: "file://mecca_56_22.mp3",
                     icon: "file://icon.png",
                     data: { meetingId:"123#fg8" }
@@ -408,6 +410,7 @@
                     title: "Waktunya sholat dhuhur",
                     text: waktu,
                     firstAt: waktu,
+                    every: "day",
                     sound: "file://mecca_56_22.mp3",
                     icon: "file://icon.png",
                     data: { meetingId:"123#fg8" }
@@ -429,6 +432,7 @@
                     title: "Waktunya sholat dhuhur",
                     text: waktu,
                     firstAt: waktu,
+                    every: "day",
                     sound: "file://mecca_56_22.mp3",
                     icon: "file://icon.png",
                     data: { meetingId:"123#fg8" }
@@ -450,6 +454,7 @@
                     title: "Waktunya sholat dhuhur",
                     text: waktu,
                     firstAt: waktu,
+                    every: "day",
                     sound: "file://mecca_56_22.mp3",
                     icon: "file://icon.png",
                     data: { meetingId:"123#fg8" }
