--- a/www/index.html
+++ b/www/index.html
@@ -407,7 +407,7 @@
 
                 cordova.plugins.notification.local.schedule({
                     id: 3,
-                    title: "Waktunya sholat dhuhur",
+                    title: "Waktunya sholat asr",
                     text: waktu,
                     firstAt: waktu,
                     every: "day",
@@ -429,7 +429,7 @@
 
                 cordova.plugins.notification.local.schedule({
                     id: 4,
-                    title: "Waktunya sholat dhuhur",
+                    title: "Waktunya sholat maghrib",
                     text: waktu,
                     firstAt: waktu,
                     every: "day",
@@ -451,7 +451,7 @@
 
                 cordova.plugins.notification.local.schedule({
                     id: 5,
-                    title: "Waktunya sholat dhuhur",
+                    title: "Waktunya sholat isha",
                     text: waktu,
                     firstAt: waktu,
                     every: "day",
