--- a/www/index.html
+++ b/www/index.html
@@ -152,6 +152,12 @@
                             <label class="mdl-textfield__label" for="Password">Password</label>
                             <span class="mdl-textfield__error">Password</span>
                         </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" style="padding-top:0; padding-bottom:0;">
+                            <p style="font-weight: bolder;">
+                                 {{ message }}
+                            </p>
+                            <img src="img/ring.svg" ng-show="waited" style="width:36px; height:36px; margin-left: 42%; padding-bottom:10px; margin-top:-20px;">
+                        </div>
                         <p>
                             <button ng-click="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"  style="text-align : right;"">
                                 Login
