--- a/www/login.html
+++ b/www/login.html
@@ -68,14 +68,14 @@
                             <span class="mdl-textfield__error">Password</span>
                         </div>
                         <p>
-                            <button ng-click="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"  style="text-align : right;"">
+                            <button ng-click="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"  style="text-align : right;">
                                 Login {{ currentUser }}
                             </button>
                         </p>
                     </div>
                 </div>
             </div>
-            
+
         </main>
     </div>
     <script src="js/material.min.js"></script>
