--- a/www/index.html
+++ b/www/index.html
@@ -72,12 +72,16 @@
         </div> -->
         <!-- main index -->
         <input id="gcm_id" ng-model="gcm_id" type="hidden" name="gcm_id">
-        <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+        <!-- <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a> -->
+        <div class="menu-bar" ng-show="user_id != null || skiped == true">
+            <img class="logo-dreamtour1" src="img/LOGO_DREAM.png">
+        </div>
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
-                <div class="mdl-grid">
-                    <div class="logo-box">
+
+                <div class="mdl-grid" style="padding-top: 130px;">
+                    <!-- <div class="logo-box">
                         <img class="logo-dreamtour" src="img/dream.png">
-                    </div>
+                    </div> -->
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone" style="text-align:center;"><!-- FAB button with ripple -->
                         <a href="pilihpaket.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" style="box-shadow : none; width:100px; height:100px; margin-bottom: 5px;">
                           <img src="img/paket.jpg" style="width:100%; height:100%;">
@@ -172,6 +176,20 @@
 
         </main>
     </div>
+    <style>
+        .menu-bar
+        {
+            background-color: rgb(31, 47, 98);
+            height: 110px;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            box-shadow: 0 10px 5px rgba(56, 52, 52, 0.58);
+        }
+    </style>
+
     <style type="text/css">
        a {
             color: rgb(39, 30, 125);
