menu bar update

--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -47,7 +47,15 @@
 
 <body ng-app="dreamtour" ng-controller="ChatRoomController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-       <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+       <div class="menu-bar-2">
+           <a href="index.html">
+               <img class="back-button-menu" src="img/back_button.png">
+               <p class="label-menu">
+                   Home
+               </p>
+           </a>
+           <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+       </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="logo-box">
@@ -65,7 +73,7 @@
 
 
             </div>
-            
+
         </main>
     </div>
     <script src="js/material.min.js"></script>
