--- a/www/doa1.html
+++ b/www/doa1.html
@@ -68,7 +68,15 @@
 
 <body ng-app="dreamtour" ng-controller="DoaDetailController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <a href="doa.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+        <div class="menu-bar-2">
+            <a href="doa.html">
+                <img class="back-button-menu" src="img/back_button.png">
+                <p class="label-menu">
+                    Home
+                </p>
+            </a>
+            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+        </div>
         <main class="mdl-layout__content">
 
             <div class="logo-box">
@@ -80,7 +88,7 @@
 
 
             </div>
-            
+
         </main>
     </div>
     <script src="js/material.min.js"></script>
