--- a/www/doa2.html
+++ b/www/doa2.html
@@ -32,7 +32,15 @@
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+        <div class="menu-bar-2">
+            <a href="doa-umroh.html">
+                <img class="back-button-menu" src="img/back_button.png">
+                <p class="label-menu">
+                    Home
+                </p>
+            </a>
+            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+        </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width doa">
               <div class="logo-box">
@@ -41,7 +49,7 @@
                <img src="img/doa1.png" style="width: 100%; height: 100%;">
 
             </div>
-            
+
         </main>
     </div>
     <script src="js/material.min.js"></script>
