--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-<!-- 
-    <link rel="stylesheet" href="css/jquery.mobile-1.1.1.min.css">  -->  
+<!--
+    <link rel="stylesheet" href="css/jquery.mobile-1.1.1.min.css">  -->
     <link rel="stylesheet" href="css/compass.css" type="text/css">
     <link rel="stylesheet" href="css/material.grey-pink.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -23,7 +23,15 @@
 
 <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
-        <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
+        <div class="menu-bar-2">
+            <a href="index.html">
+                <img class="back-button-menu" src="img/back_button.png">
+                <p class="label-menu">
+                    Home
+                </p>
+            </a>
+            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+        </div>
         <main class="mdl-layout__content">
             <div class="mdl-grid">
                 <div class="logo-box">
@@ -33,15 +41,15 @@
                     <div id=compass>
                         <div id=needle></div>
                     </div>
-                    
+
                     <!-- <div id=info-panel></div> -->
                 </div>
             </div>
-      
+
         </main>
     </div>
     <script src="js/material.min.js"></script>
-    <script src="js/jquery-1.8.2.min.js"></script><!-- 
+    <script src="js/jquery-1.8.2.min.js"></script><!--
     <script src="js/jquery.mobile-1.1.1.min.js"></script> -->
     <script type="text/javascript" src="js/compass.js"></script>
     <style type="text/css">
@@ -58,5 +66,3 @@
 </body>
 
 </html>
-
-
