--- a/www/doa-umroh.html
+++ b/www/doa-umroh.html
@@ -68,7 +68,7 @@
 
 <body ng-app="dreamtour" ng-controller="DoaUmrohController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-       
+
        <div class="menu-bar-2">
            <a href="list-doa.html">
                <img class="back-button-menu" src="img/back_button.png">
@@ -78,11 +78,11 @@
            </a>
            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
        </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width">
-              <div class="logo-box">
+              <!-- <div class="logo-box">
                 <img class="logo-dreamtour" src="img/dream.png">
-              </div>
+              </div> -->
                 <ul class="demo-list-item mdl-list">
                   <li class="mdl-list__item" ng-repeat="doa in doas">
                     <span class="mdl-list__item-primary-content"><a href="doa-umroh-detail.html?id={{ $index }}">
