--- a/www/manasik-umroh.html
+++ b/www/manasik-umroh.html
@@ -56,11 +56,11 @@
            </a>
            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
        </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width">
-              <div class="logo-box">
+              <!-- <div class="logo-box">
                   <img class="logo-dreamtour" src="img/dream.png">
-              </div>
+              </div> -->
                 <ul class="demo-list-item mdl-list">
                   <li class="mdl-list__item" ng-repeat="doa in doas">
                     <span class="mdl-list__item-primary-content"><a href="doa1.html?id={{ $index }}">
