--- a/www/newsletter.html
+++ b/www/newsletter.html
@@ -56,11 +56,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
 
-            <div class="logo-box">
+            <!-- <div class="logo-box">
                 <img class="logo-dreamtour" src="img/dream.png">
-            </div>
+            </div> -->
             <div class="mdl-grid portfolio-max-width" ng-repeat="news in newsletters">
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card  mdl-card mdl-shadow--4dp portfolio-blog-card-compact">
                     <div class="mdl-card__title ">
