--- a/www/doa2.html
+++ b/www/doa2.html
@@ -41,11 +41,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width doa">
-              <div class="logo-box">
+              <!-- <div class="logo-box">
                 <img class="logo-dreamtour" src="img/dream.png">
-              </div>
+              </div> -->
                <img src="img/doa1.png" style="width: 100%; height: 100%;">
 
             </div>
