--- a/www/feedback.html
+++ b/www/feedback.html
@@ -73,11 +73,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
-                <div class="logo-box">
+                <!-- <div class="logo-box">
                     <img class="logo-dreamtour" src="img/dream.png">
-                </div>
+                </div> -->
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Feedback</h2>
