--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -26,11 +26,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid">
-                <div class="logo-box">
+                <!-- <div class="logo-box">
                     <img class="logo-dreamtour" src="img/dream.png">
-                </div>
+                </div> -->
                 <div style="width:65%;">
                     <p class="dateNow" style="color:white; margin-left: 10px;"></p>
                 </div>
