--- a/www/login.html
+++ b/www/login.html
@@ -47,11 +47,11 @@
 <body ng-app="dreamtour" ng-controller="AuthController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width portfolio-contact">
-                <div class="logo-box">
+                <!-- <div class="logo-box">
                     <img class="logo-dreamtour" src="img/dream.png">
-                </div>
+                </div> -->
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text" style="text-align : center;">Login</h2>
