--- a/www/paketRegular.html
+++ b/www/paketRegular.html
@@ -73,10 +73,10 @@
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
         <!--  <main class="mdl-layout__content" ng-include="'list-regular.html'"></main> -->
-        <main class="mdl-layout__content">
-            <div class="logo-box">
+        <main class="mdl-layout__content main-padding">
+            <!-- <div class="logo-box">
                 <img class="logo-dreamtour" src="img/dream.png">
-            </div>
+            </div> -->
             <div ng-include="state + '.html'" autoscroll></div>
 
 
