--- a/www/qiblat.html
+++ b/www/qiblat.html
@@ -32,11 +32,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding">
             <div class="mdl-grid">
-                <div class="logo-box">
+                <!-- <div class="logo-box">
                     <img class="logo-dreamtour" src="img/dream.png">
-                </div>
+                </div> -->
                 <div style="position:relative; height:330px; width: 100%;">
                     <div id=compass>
                         <div id=needle></div>
