--- a/www/tips-detail.html
+++ b/www/tips-detail.html
@@ -77,11 +77,11 @@
             </a>
             <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
         </div>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content main-padding-2">
 
-            <div class="logo-box">
+            <!-- <div class="logo-box">
                 <img class="logo-dreamtour" src="img/dream.png">
-            </div>
+            </div> -->
             <div style="text-align : center; color: white; margin-bottom: 5%;">{{ doas[doa].name }}</div>
             <div class="mdl-grid portfolio-max-width doa" ng-repeat="image in doas[doa].images">
                <img src="img/{{ image }}" style="width: 100%; height: 100%;"">
