--- a/www/feedback.html
+++ b/www/feedback.html
@@ -109,7 +109,7 @@
                                 </button>
                             </p>
 
-                            <div class="mdl-card__actions mdl-card--border" ng-show="submited">
+                            <div class="mdl-card__actions mdl-card--border" ng-show="submited == true">
                                 <a href="index.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">
                                   Feedback Submit success
                                 </a>
