--- a/www/detail.html
+++ b/www/detail.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="mdl-grid portfolio-copy">
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">IDR {{ package.price }}</h3>
+            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">{{ package.price }}</h3>
 
             <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Rincian Perjalanan</h3>
             <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.perjalanan | html"></div>
