--- a/www/paketExclusive.html
+++ b/www/paketExclusive.html
@@ -81,6 +81,38 @@
 
         </main>
 
+
+        <div class="box-bottom" ng-show="state == 'detail'">
+            <p class="box-bottom-label-left">
+                Price
+            </p>
+            <p class="box-bottom-label-right">
+                {{ package.price }}
+            </p>
+            <i class="fa fa-angle-down fa-lg box-bottom-icon-down" ng-click="popClick()" aria-hidden="true"></i>
+
+            <div class="box-bottom-inside" ng-show="pop">
+                <table class="box-bottom-inside-table">
+                    <tr>
+                        <td style="width: 25%;">
+                            Hotel
+                        </td>
+                        <td>
+                            <p ng-bind-html="package.hotel | html" class="box-bottom-inside-p"></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Airlines
+                        </td>
+                        <td class="box-bottom-inside-p">
+                            {{ package.airlines }}
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
     </div>
     <script src="js/material.min.js"></script>
 </body>
