--- a/www/message.html
+++ b/www/message.html
@@ -60,12 +60,21 @@
 
   <body ng-app="dreamtour" ng-controller="MessageController">
 
-    <div class="menu">
+    <!-- <div class="menu">
             <div class="back"><a href="index.html"><i class="fa fa-chevron-left"></i></a> </div>
             <div class="name">Customer Service</div>
-        </div>
+    </div> -->
+    <div class="menu-bar-2">
+        <a href="index.html">
+            <img class="back-button-menu" src="img/back_button.png">
+            <p class="label-menu">
+                Home
+            </p>
+        </a>
+        <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+    </div>
 
-    <div  id="chatBox" schroll-bottom="chats">
+    <div  id="chatBox" schroll-bottom="chats" style="width: 97%; margin-top: 38px;">
       <ol class="chat">
       <!-- <li class="self">
 
