--- a/www/chat.html
+++ b/www/chat.html
@@ -53,6 +53,8 @@
         position:absolute;
           height: 100%;
           overflow : auto;
+          style="width: 100%;
+          margin-top: 38px;"
       }
     </style>
 
@@ -60,10 +62,19 @@
 
   <body ng-app="dreamtour" ng-controller="ChatController">
 
-    <div class="menu">
-            <div class="back"><a href="chatroom.html"><i class="fa fa-chevron-left"></i></a> <img src="img/umrah-plus.jpg" draggable="false"/></div>
-            <div class="name">Umroh</div>
-        </div>
+    <!-- <div class="menu">
+        <div class="back"><a href="chatroom.html"><i class="fa fa-chevron-left"></i></a> <img src="img/umrah-plus.jpg" draggable="false"/></div>
+        <div class="name">Umroh</div>
+    </div> -->
+    <div class="menu-bar-2">
+        <a href="chatroom.html">
+            <img class="back-button-menu" src="img/back_button.png">
+            <p class="label-menu">
+                Home
+            </p>
+        </a>
+        <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+    </div>
     <div  id="chatBox" schroll-bottom="chats">
     <ol class="chat">
     <li class="" ng-repeat="chat in chats" ng-class="{self: chat.user_id==user_id, other: chat.user_id != user_id}">
