pilih paket menu

--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -45,13 +45,21 @@
         <!-- <a href="index.html" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a> -->
 
         <div class="menu-bar-2">
-            <a href="index.html">
-                <img class="back-button-menu" src="img/back_button.png">
-                <p class="label-menu">
-                    Home
-                </p>
-            </a>
-            <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+            <table style="margin-top: 30px; width: 100%;">
+                <tr>
+                    <td style="padding: 13px; padding-right: 2px;">
+                        <a href="index.html">
+                            <i class="fa fa-angle-left fa-lg" aria-hidden="true" style="color:white;"></i>
+                        </a>
+                    </td>
+                    <td style="color:white; font-family: 'Roboto','Helvetica','Arial',sans-serif;">
+                        Home
+                    </td>
+                    <td>
+                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.png">
+                    </td>
+                </tr>
+            </table>
         </div>
 
         <main class="mdl-layout__content main-padding">
