--- a/www/chatroom.html
+++ b/www/chatroom.html
@@ -47,15 +47,23 @@
 
 <body ng-app="dreamtour" ng-controller="ChatRoomController">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-       <div class="menu-bar-2">
-           <a href="index.html">
-               <img class="back-button-menu" src="img/back_button.png">
-               <p class="label-menu">
-                   Home
-               </p>
-           </a>
-           <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
-       </div>
+        <div class="menu-bar-2">
+            <table style="margin-top: 30px; width: 100%;">
+                <tr>
+                    <td style="padding: 13px; padding-right: 2px;">
+                        <a href="index.html">
+                            <i class="fa fa-angle-left fa-lg" aria-hidden="true" style="color:white;"></i>
+                        </a>
+                    </td>
+                    <td style="color:white; font-family: 'Roboto','Helvetica','Arial',sans-serif;">
+                        Home
+                    </td>
+                    <td>
+                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.png">
+                    </td>
+                </tr>
+            </table>
+        </div>
         <main class="mdl-layout__content main-padding">
             <div class="mdl-grid portfolio-max-width">
                 <!-- <div class="logo-box">
