--- a/www/message.html
+++ b/www/message.html
@@ -51,7 +51,6 @@
     <style type="text/css">
       #chatBox {
         position:absolute;
-          height: 100%;
           overflow : auto;
       }
     </style>
@@ -64,14 +63,22 @@
             <div class="back"><a href="index.html"><i class="fa fa-chevron-left"></i></a> </div>
             <div class="name">Customer Service</div>
     </div> -->
-    <div class="menu-bar-2">
-        <a href="index.html">
-            <img class="back-button-menu" src="img/back_button.png">
-            <p class="label-menu">
-                Home
-            </p>
-        </a>
-        <img class="logo-dreamtour-menu" src="img/LOGO_DREAM.png">
+    <div class="menu-bar-2" style="position:absolute;">
+        <table style="margin-top: 30px; width: 100%;">
+            <tr>
+                <td style="padding: 13px; padding-right: 2px;">
+                    <a href="index.html">
+                        <i class="fa fa-angle-left fa-lg" aria-hidden="true" style="color:white;"></i>
+                    </a>
+                </td>
+                <td style="color:white; font-family: 'Roboto','Helvetica','Arial',sans-serif;">
+                    Home
+                </td>
+                <td>
+                    <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.png">
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div  id="chatBox" schroll-bottom="chats" style="width: 97%; margin-top: 38px;">
