--- a/www/chat.html
+++ b/www/chat.html
@@ -110,13 +110,17 @@
     // var objDiv = document.getElementById("divChat");
     // objDiv.scrollTop = objDiv.scrollHeight;
 
-
+    $('#chatBox').scrollTop(1000000);
     // function jumpToPageBottom() {
     //   $('html, body').scrollTop( $(document).height()-$(window).height());
-
+    //
     // }
-
+    //
     // jumpToPageBottom();
+    // var chatBox = document.getElementById("chatBox");
+    // chatBox.scrollTop = chatBox.scrollHeight;
+    alert(chatBox.scrollTop);
+    // $(".chat").scrollTop($(".chat")[0].scrollHeight)
   </script>
 
   </body>
