--- a/www/message.html
+++ b/www/message.html
@@ -81,7 +81,7 @@
         </table>
     </div>
 
-    <div  id="chatBox" schroll-bottom="chats" style="width: 97%; margin-top: 38px;">
+    <div  id="chatBox" schroll-bottom="chats" style="width: 97%;">
       <ol class="chat">
       <!-- <li class="self">
 
