--- a/www/detail.html
+++ b/www/detail.html
@@ -1,26 +1,45 @@
-<div class="mdl-grid portfolio-max-width">
-    <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">{{ package.name }}</h2>
+<div style="background: #eaeaea;">
+    <div style="padding-bottom:10px;">
+        <img class="article-image" ng-src="http://mobile-dreamtour.com/images/packages/{{package.photo}}" border="0" alt="">
+        <div style="height:72px; background-color:#1f2f62; text-align: center;">
+            <p style="font-size: xx-large; font-weight: 100; font-family: roboto;
+        color: white;
+        vertical-align: bottom;
+        line-height: 85px;">Itinerary</p>
         </div>
-        <div class="mdl-card__media">
-            <img class="article-image" ng-src="http://mobile-dreamtour.com/images/packages/{{package.photo}}" border="0" alt="">
+    </div>
+    <div class="mdl-grid portfolio-max-width">
+        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp" style="border-radius: 6px; background-color: #1f2f62;" ng-repeat="jalan in perjalanan">
+            <div class="mdl-card__media">
+                <img class="article-image" ng-src="http://mobile-dreamtour.com/images/packages/{{jalan.image}}" border="0" alt="">
+            </div>
+            <div class="mdl-grid portfolio-copy" style="margin: 0;">
+                <table style="width:100%">
+                  <tr>
+                    <td><p class="pull-left" style="margin-bottom: 0; font-size: larger;
+                        font-weight: 100;
+                        font-family: roboto;
+                        color: white;">{{ jalan.title }}</p></td>
+                    <td align="right">
+                        <p class="pull-right" style="margin-bottom: 0;font-size: larger;
+                        font-weight: 500;
+                        font-family: roboto;
+                        color: white;">{{ jalan.description }}</p></td>
+                  </tr>
+                </table>
+            </div>
         </div>
+        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp" style="border-radius: 6px; margin-bottom: 60px;">
+            <div class="mdl-grid portfolio-copy">
 
-        <div class="mdl-grid portfolio-copy">
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">{{ package.price }}</h3>
+                <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.perjalanan | html"></div>
 
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Rincian Perjalanan</h3>
-            <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.perjalanan | html"></div>
+                <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.detail | html"></div>
 
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Detail</h3>
-            <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.detail | html"></div>
+                <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.persyaratan | html"></div>
 
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Persyaratan</h3>
-            <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.persyaratan | html"></div>
-
-            <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Informasi Lebih Lanjut</h3>
-            <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.informasi_lanjut | html"></div>
+                <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding " ng-bind-html="package.informasi_lanjut | html"></div>
+            </div>
         </div>
     </div>
 </div>
